--- a/Cocktails/View/Base.lproj/Main.storyboard
+++ b/Cocktails/View/Base.lproj/Main.storyboard
@@ -193,6 +193,7 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="byk-qF-85e">
                                         <rect key="frame" x="8" y="14" width="304" height="304"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="byk-qF-85e" secondAttribute="height" multiplier="1:1" id="Cbh-oM-v4I"/>
                                         </constraints>
